// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Button props testing bgStyle 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing bgStyle 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-outline"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing bgStyle 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-outline"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing bgStyle 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-transparent"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing bgStyle 5`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-transparent"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing bgStyle 6`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-outline"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkGrammar 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkGrammar 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkGrammar 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkGrammar 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkHighlight 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkHighlight 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkHighlight 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkHighlight 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkSpaces 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkSpaces 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkSpaces 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing checkSpaces 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing className 1`] = `
<button
  className="uu5-bricks-button my-classname uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 1`] = `
<button
  className="color-schema-default uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 2`] = `
<button
  className="color-schema-red uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 3`] = `
<button
  className="color-schema-red uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 4`] = `
<button
  className="color-schema-red-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 5`] = `
<button
  className="color-schema-red-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 6`] = `
<button
  className="color-schema-green uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 7`] = `
<button
  className="color-schema-green uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 8`] = `
<button
  className="color-schema-green-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 9`] = `
<button
  className="color-schema-green-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 10`] = `
<button
  className="color-schema-yellow uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 11`] = `
<button
  className="color-schema-yellow uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 12`] = `
<button
  className="color-schema-yellow-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 13`] = `
<button
  className="color-schema-yellow-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 14`] = `
<button
  className="color-schema-purple uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 15`] = `
<button
  className="color-schema-purple uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 16`] = `
<button
  className="color-schema-purple-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 17`] = `
<button
  className="color-schema-purple-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 18`] = `
<button
  className="color-schema-brown uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 19`] = `
<button
  className="color-schema-brown uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 20`] = `
<button
  className="color-schema-brown-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 21`] = `
<button
  className="color-schema-brown-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 22`] = `
<button
  className="color-schema-orange uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 23`] = `
<button
  className="color-schema-orange uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 24`] = `
<button
  className="color-schema-orange-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 25`] = `
<button
  className="color-schema-orange-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 26`] = `
<button
  className="color-schema-cyan uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 27`] = `
<button
  className="color-schema-cyan uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 28`] = `
<button
  className="color-schema-cyan-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 29`] = `
<button
  className="color-schema-cyan-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 30`] = `
<button
  className="color-schema-grey uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 31`] = `
<button
  className="color-schema-grey uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 32`] = `
<button
  className="color-schema-grey-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 33`] = `
<button
  className="color-schema-grey-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 34`] = `
<button
  className="color-schema-pink uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 35`] = `
<button
  className="color-schema-pink uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 36`] = `
<button
  className="color-schema-pink-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 37`] = `
<button
  className="color-schema-pink-rich uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing colorSchema 38`] = `
<button
  className="color-schema-pink uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing content 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    12345
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing content 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing content 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing content 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    12345
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing controlled 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing controlled 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing controlled 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing controlled 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing default props 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing disabled 1`] = `
<button
  className="uu5-bricks-button uu5-common-disabled uu5-bricks-button-m uu5-bricks-button-filled"
  disabled={true}
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing disabled 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing disabled 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing disabled 4`] = `
<button
  className="uu5-bricks-button uu5-common-disabled uu5-bricks-button-m uu5-bricks-button-filled"
  disabled={true}
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing displayBlock 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled uu5-bricks-button-block"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing displayBlock 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing displayBlock 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing displayBlock 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled uu5-bricks-button-block"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing dynamic 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing dynamic 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing dynamic 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing dynamic 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing hidden 1`] = `
<button
  className="uu5-bricks-button uu5-common-hidden uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing hidden 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing hidden 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing hidden 4`] = `
<button
  className="uu5-bricks-button uu5-common-hidden uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="https://unicorn.com/"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="www.unicorn.com"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="www.unicorn.com"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="http://example.com/test_url_for_tools-ifc.test.js?param=value#about"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 5`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="http://example.com/test_url_for_tools-ifc.test.js?param=value#about"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 6`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="mailto:me@example.com"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 7`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="mailto:me@example.com"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 8`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="ftp://example.com/folder"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 9`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="ftp://example.com/folder"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing href 10`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  href="mailto:me@example.com"
  id="uuID"
  onClick={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing id 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="myId"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing ignoreHTML 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing ignoreHTML 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing ignoreHTML 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing ignoreHTML 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing mainAttrs 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing name 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 5`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 6`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 7`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 8`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 9`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 10`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 11`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 12`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 13`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 14`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 15`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 16`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 17`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 18`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Button props testing nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Button props testing noIndex 1`] = `
<button
  className="uu5-bricks-button uu5-noindex uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing noIndex 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing noIndex 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing noIndex 4`] = `
<button
  className="uu5-bricks-button uu5-noindex uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pressed 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pressed 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pressed 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pressed 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled active"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pureRender 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pureRender 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pureRender 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing pureRender 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing selected 1`] = `
<button
  className="uu5-bricks-button uu5-common-selected uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing selected 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing selected 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing selected 4`] = `
<button
  className="uu5-bricks-button uu5-common-selected uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-s uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-l uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 5`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-l uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 6`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-xl uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 7`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-xl uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing size 8`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-l uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing style 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing style 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing style 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing style 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 5`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 6`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 7`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing target 8`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing textCorrector 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing textCorrector 2`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing textCorrector 3`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing textCorrector 4`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title={null}
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;

exports[`UU5.Bricks.Button props testing tooltip 1`] = `
<button
  className="uu5-bricks-button uu5-bricks-button-m uu5-bricks-button-filled"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
  type="button"
>
  <span
    className="uu5-bricks-button-text"
    key="0"
  >
    Button
  </span>
</button>
`;
